--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install flake8 pylint mypy
+        python3 -m pip install flake8 pylint mypy types-requests
     - name: Install
       run: make install
     - name: Test
